java_backup/java.jimut/jmt_games/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
G:\Program Files\Java\jdk1.7.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
G:\Program Files\BlueJ\lib\bluejcore.jar;G:\Program Files\BlueJ\lib\junit-4.8.2.jar;D:\java.jimut\jmt_games
-d
D:\java.jimut\jmt_games\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
G:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\java.jimut\jmt_games\stone_paper_scissor.java
<---- end of javadoc command ---->
Loading source file D:\java.jimut\jmt_games\stone_paper_scissor.java...
D:\java.jimut\jmt_games\stone_paper_scissor.java:11: error: reached end of file while parsing
             System.out.println("WELCOME TO HAND-CRICKET...");
                                                              ^
1 error
